fix account select overflow

--- a/client/assets/styles/scss/popover/popover-account-menu.scss
+++ b/client/assets/styles/scss/popover/popover-account-menu.scss
@@ -1,4 +1,5 @@
 .popover-account-menu {
+  max-width: 180px;
 
   .list {
     max-height: 50vh;
